<resources>
    <string name="app_name">MASM Designer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Micro assembly designer</string>
    <string name="nav_header_subtitle">Finite\'s in house designer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Controls</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_console">Console</string>
    <string name="menu_settings">Settings</string>
    
    <!-- Settings Strings -->
    <string name="settings_theme_title">Theme</string>
    <string name="settings_theme_summary">Choose light or dark theme</string>
    <string name="settings_syntax_title">Syntax Highlighting</string>
    <string name="settings_syntax_summary">Customize editor colors</string>
    <string name="settings_category_appearance">Appearance</string>
    <string name="settings_category_editor">Editor</string>
    <string name="consoleinput">standard in :3</string>
    <string name="outputconsole">output of program will appear here</string>
</resources>