<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_category_appearance">
        <ListPreference
            android:key="theme_preference"
            android:title="@string/settings_theme_title"
            android:summary="@string/settings_theme_summary"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:defaultValue="system" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_category_editor">
        <SwitchPreference
            android:key="syntax_highlighting"
            android:title="@string/settings_syntax_title"
            android:summary="@string/settings_syntax_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Editor Settings">
        <SwitchPreferenceCompat
            android:key="line_numbers"
            android:title="Show Line Numbers"
            android:defaultValue="true" />
            
        <ListPreference
            android:key="font_size"
            android:title="Font Size"
            android:entries="@array/font_size_entries"
            android:entryValues="@array/font_size_values"
            android:defaultValue="14" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Theme">
        <SwitchPreferenceCompat
            android:key="dark_mode"
            android:title="Dark Mode"
            android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>
