<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="org.Finite.microasmeditor.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="org.Finite.microasmeditor.ui.console.ConsoleFragment"
        android:label="@string/menu_console"
        tools:layout="@layout/fragment_console" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="org.Finite.microasmeditor.ui.settings.SettingsFragment"
        android:label="@string/menu_settings" />
</navigation>